[server]: Attempt to configure Allowed Origins